# game-of-life

./: .gitignore  CMakeLists.txt  main.c
core/: app.c  app.h  field.c  field.h
core/vector/: vector.c  vector.h
